# keystone3-firmware

./: .gitignore  .gitmodules  .lldbinit  CHANGELOG-BTC.md  CHANGELOG-CYPHERPUNK.md  CHANGELOG-ZH-BTC.md  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  COPYING-KEYSTONE  Dockerfile  KASPA_FINAL.md  LICENSE  PSBT_WITNESS_ONLY_TEST.md  README.md  README.md.bak  SIMULATOR.md  analyze_psbt.py  analyze_psbt_fee.py  astyle.sh  build.bat  build.py  build.sh  build_to_makelog.bat  build_update_lib.bat  check_psbt.py  copy.sh  create_ur_qr.py  decode_ur_manual.py  entitlements.plist  et  find_witness_utxo.py  firmware.cmake  flake.nix  img_converter.py  librust_c.h  listfile.txt  make_file_test.bat  mh1903.cmake  mh1903_main.cmake  (+11 more)
ci/: env  (+6 more)
crypto/slip39/: CMakeLists.txt  slip39.c  slip39.h  slip39_group.h  slip39_wordlist.h
crypto/slip39/demo/: slip39_demo.c
crypto/slip39/trezor-crypto/: address.c  base32.c  base58.c  bignum.c  bignum.h  bip32.c  bip32.h  bip39.c  bip39.h  blake256.c  blake256.h  blake2_common.h  blake2b.c  blake2b.h  blake2s.c  blake2s.h  cash_addr.c  ecdsa.c  ecdsa.h  groestl.c  groestl.h  groestl_internal.h  hasher.c  hasher.h  hmac.c  hmac.h  memzero.c  nem.c  nem.h  nist256p1.c  pbkdf2.c  rand.c  rfc6979.c  rfc6979.h  ripemd160.c  ripemd160.h  script.c  secp256k1.c  segwit_addr.c  sha3.c  (+1 more)
crypto/slip39/trezor-crypto/aes/: aes.h  aes_modes.c  aescrypt.c  aeskey.c  aesopt.h  aestab.c  aestab.h  aestst.c  aestst.h
crypto/slip39/trezor-crypto/chacha20poly1305/: chacha20poly1305.c  chacha_merged.c  ecrypt-config.h  ecrypt-sync.h  poly1305-donna-32.h  poly1305-donna.c  poly1305-donna.h  rfc7539.c
crypto/slip39/trezor-crypto/ed25519-donna/: curve25519-donna-32bit.c  curve25519-donna-32bit.h  curve25519-donna-helpers.c  curve25519-donna-helpers.h  curve25519-donna-scalarmult-base.c  ed25519-donna-32bit-tables.c  ed25519-donna-32bit-tables.h  ed25519-donna-basepoint-table.c  ed25519-donna-impl-base.c  ed25519-donna-impl-base.h  ed25519-donna-portable.h  ed25519-donna.h  ed25519-hash-custom-keccak.h  ed25519-hash-custom-sha3.h  ed25519-hash-custom.h  ed25519.c  modm-donna-32bit.c  modm-donna-32bit.h
crypto/slip39/trezor-crypto/gui/: mainwindow.cpp  mainwindow.h
crypto/slip39/trezor-crypto/monero/: base58.c  base58.h  int-util.h  range_proof.c  range_proof.h  serialize.c  xmr.c  xmr.h
crypto/slip39/trezor-crypto/tests/: test_check.c  test_check_cardano.h  test_check_cashaddr.h  test_check_monero.h  test_check_segwit.h  test_openssl.c  test_speed.c
crypto/slip39/trezor-crypto/tools/: bip39bruteforce.c  mktable.c  xpubaddrgen.c
rust/: .gitignore  BUILD.MD  CMakeLists.txt  Cargo.toml  README.md  commands.sh  rust-toolchain  rust_c.cmake
rust/.cargo/: config.toml
rust/apps/: Cargo.toml
rust/apps/aptos/: Cargo.toml
rust/apps/aptos/src/: errors.rs  lib.rs  parser.rs
rust/apps/arweave/: Cargo.toml
rust/apps/arweave/src/: ao_transaction.rs  data_item.rs  deep_hash.rs  errors.rs  lib.rs  tokens.rs  transaction.rs
rust/apps/avalanche/: Cargo.toml
rust/apps/avalanche/src/: address.rs  constants.rs  errors.rs  lib.rs  network.rs  ripple_keypair.rs
rust/apps/babylon/: Cargo.toml
rust/apps/babylon/src/: errors.rs  lib.rs
rust/apps/bitcoin/: Cargo.toml
rust/apps/bitcoin/embedded/: Cargo.toml  memory.x
rust/apps/bitcoin/src/: errors.rs  lib.rs  macros.rs  message.rs  network.rs
rust/apps/cardano/: Cargo.toml
rust/apps/cardano/src/: address.rs  detail.rs  errors.rs  governance.rs  lib.rs  overview.rs  slip23.rs  structs.rs  transaction.rs
rust/apps/cosmos/: Cargo.toml  rustfmt.toml
rust/apps/cosmos/src/: errors.rs  lib.rs  utils.rs
rust/apps/ergo/: Cargo.toml
rust/apps/ergo/src/: address.rs  errors.rs  lib.rs  macros.rs  mnemonic.rs  structs.rs  transaction.rs
rust/apps/ethereum/: Cargo.toml
rust/apps/ethereum/src/: abi.rs  address.rs  batch_tx_rules.rs  crypto.rs  eip1559_transaction.rs  eip7702_authorization.rs  erc20.rs  errors.rs  legacy_transaction.rs  legacy_transaction_v2.rs  lib.rs  normalizer.rs  structs.rs  swap.rs  traits.rs
rust/apps/icp/: Cargo.toml
rust/apps/icp/src/: account_id.rs  address.rs  errors.rs  lib.rs  principal.rs  principal_id.rs  types.rs
rust/apps/iota/: Cargo.toml  README.md
rust/apps/iota/src/: account.rs  address.rs  base_type.rs  byte_reader.rs  commands.rs  errors.rs  lib.rs  structs.rs  transaction.rs
rust/apps/kaspa/: Cargo.toml
rust/apps/kaspa/src/: addresses.rs  errors.rs  lib.rs
rust/apps/monero/: Cargo.toml
rust/apps/monero/src/: address.rs  errors.rs  extra.rs  key.rs  key_images.rs  lib.rs  outputs.rs  signed_transaction.rs  structs.rs  transfer.rs  transfer_key.rs  utils.rs  varinteger.rs
rust/apps/near/: Cargo.toml
rust/apps/near/src/: errors.rs  lib.rs
rust/apps/solana/: Cargo.toml
rust/apps/solana/embedded/: Cargo.toml
rust/apps/solana/src/: address.rs  compact.rs  errors.rs  instruction.rs  lib.rs  message.rs  read.rs  structs.rs  utils.rs
rust/apps/stellar/: Cargo.toml
rust/apps/stellar/src/: address.rs  errors.rs  lib.rs  strkeys.rs  structs.rs
rust/apps/sui/: Cargo.toml
rust/apps/sui/src/: errors.rs  lib.rs
rust/apps/ton/: Cargo.toml
rust/apps/ton/src/: errors.rs  jettons.rs  lib.rs  mnemonic.rs  structs.rs  transaction.rs  utils.rs
rust/apps/transport/: Cargo.toml
rust/apps/tron/: Cargo.toml  README.md  build.rs
rust/apps/utils/: Cargo.toml
rust/apps/wallets/: Cargo.toml
rust/apps/xrp/: Cargo.toml
rust/apps/zcash/: Cargo.toml  build.rs  rust-toolchain
rust/keystore/: Cargo.toml
rust/keystore/src/: bindings.rs  errors.rs  lib.rs  structs.rs
rust/pczt/: Cargo.toml  build.rs
rust/pczt/src/: lib.rs
rust/rust_c/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  cbindgen_btc_only.toml  features.cmake  librust_c.h  rust_c.cmake
rust/rust_c/src/: allocator.rs  bindings.rs  lib.rs  my_alloc.rs  trng.rs
rust/sim_qr_reader/: Cargo.toml
rust/sim_qr_reader/src/: lib.rs
rust/tools/: Cargo.toml
rust/tools/src/: binding.rs  lib.rs  macros.rs
rust/zcash_vendor/: Cargo.toml  README.md
rust/zcash_vendor/src/: lib.rs  pczt_ext.rs
(+3198 files in other folders)
