[workspace]
resolver = "2"
members = [
    # apps
    "apps/aptos",
    "apps/arweave",
    "apps/bitcoin",
    "apps/cardano",
    "apps/cosmos",
    "apps/ethereum",
    "apps/near",
    "apps/solana",
    "apps/stellar",
    "apps/sui",
    "apps/ton",
    "apps/tron",
    "apps/utils",
    "apps/wallets",
    "apps/xrp",
    "apps/zcash",
    "apps/avalanche",
    "apps/iota",

    # C interface entry
    "rust_c",

    # other
    "keystore",
    "sim_qr_reader",
    "tools",
    "zcash_vendor",
]

[workspace.dependencies]
app_aptos = { path = "apps/aptos" }
app_arweave = { path = "apps/arweave" }
app_bitcoin = { path = "apps/bitcoin" }
app_cardano = { path = "apps/cardano" }
app_cosmos = { path = "apps/cosmos", default-features = false }
app_ethereum = { path = "apps/ethereum" }
app_avalanche = { path = "apps/avalanche" }
app_near = { path = "apps/near" }
app_solana = { path = "apps/solana" }
app_stellar = { path = "apps/stellar" }
app_sui = { path = "apps/sui" }
app_ton = { path = "apps/ton" }
app_tron = { path = "apps/tron" }
app_utils = { path = "apps/utils" }
app_wallets = { path = "apps/wallets" }
app_xrp = { path = "apps/xrp" }
app_zcash = { path = "apps/zcash" }
app_monero = { path = "apps/monero" }
app_iota = { path = "apps/iota" }
keystore = { path = "keystore", default-features = false }
tools = { path = "tools" }
sim_qr_reader = { path = "sim_qr_reader" }
rust_tools = { path = "tools" }
zcash_vendor = { path = "zcash_vendor" }

# third party dependencies
cty = "0.2.0"
cstr_core = "0.2.6"
either = { version = "1.13.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
itertools = { version = "0.13.0", default-features = false, features = [
    "use_alloc",
] }
bitcoin = { version = "0.32.4", default-features = false, features = [
    "secp-recovery",
] }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
bitcoin_hashes = { version = "0.14.0", default-features = false }
core2 = { version = "0.3.3", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
rsa = { version = "0.8.2", default-features = false }
sha1 = { version = "0.10.5", default-features = false }
ur-registry = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", branch = "feat/xrp_batch" }
ur-parse-lib = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", branch = "feat/xrp_batch" }
# ur-registry = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", tag = "0.0.52" }
# ur-parse-lib = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", tag = "0.0.52" }
ed25519-bip32-core = { version = "0.1.1", default-features = false }
cryptoxide = "0.4"
arrayref = "0.3.6"
num-bigint-dig = { version = "0.8.2", default-features = false }
base64 = { version = "0.11.0", default-features = false, features = ["alloc"] }
unicode-blocks = "0.1.6"
bcs = { git = "https://github.com/KeystoneHQ/bcs.git", tag = "0.1.1" }
blake2 = { version = "0.10.6", default-features = false }
serde_json = { version = "1.0.95", default-features = false, features = [
    'alloc',
] }
serde = { version = "1.0.139", default-features = false, features = [
    'derive',
    'alloc',
] }
serde_derive = { version = "1.0.159" }
serde_bytes = { version = "0.11.5", default-features = false, features = [
    "alloc",
] }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
aes = { version = "0.8.4", default-features = false }
cbc = { version = "0.1.2", default-features = false }
cipher = { version = "0.4.4", default-features = false, features = [
    "block-padding",
    "alloc",
] }
lazy_static = "1.4.0"
ref-cast = "1.0.16"
tendermint-proto = "0.32"
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
num-bigint = { version = "0.4.5", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
blake2b_simd = { version = "1.0.2", default-features = false }
getrandom = "0.2"
minicbor = { version = "0.19", features = ["alloc"] }
# third party dependencies end
